--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="bg_placeholder">#E0E0E0</color>
+
+
+    <!---->
+    <color name="color_primary">#11ad9d</color>
 </resources>
