--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <com.hienthai.vohoctrunghoa.presentation.insets.InsetsConstraintLayout
-        app:insetsPadding="bottom|top"
+        app:insetsPadding="bottom|top|left|right"
         app:insetsType="systemBars|displayCutout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
